# freebsd-ports

./: .gitignore  GIDs  MOVED  Makefile  README.md  REALLY-READ-ME.md  UIDs
Keywords/: ldconfig.ucl
Mk/: bsd.dank.mk  bsd.gecko.mk  bsd.options.mk  bsd.port.mk  bsd.wx.mk  bsd.xorg.mk
Mk/Scripts/: do-depends.sh  qa.sh
Mk/Uses/: canberra.mk  compiler.mk  gem.mk  gl.mk  gmake.mk  gnome.mk  gssapi.mk  kde.mk  ninja.mk  xorg-cat.mk
accessibility/: Makefile
accessibility/atk/: Makefile
accessibility/orca/: Makefile
archivers/: Makefile
archivers/c-blosc/: Makefile
archivers/freeze/: Makefile
archivers/kf5-karchive/: Makefile
archivers/linux-c7-lz4/: Makefile  distinfo  pkg-plist.amd64
archivers/maxcso/: Makefile  distinfo
archivers/py-attic/: Makefile
astro/: Makefile
astro/libkgeomap/: Makefile
astro/libkgeomap-kde4/: Makefile
audio/: Makefile
audio/amarok-kde4/: Makefile
audio/ardour/: Makefile
audio/audacity/: Makefile
audio/audex/: Makefile
audio/baresip/: Makefile  Makefile.depends
audio/cadence/: Makefile
audio/clementine-player/: Makefile  distinfo  pkg-plist
audio/creox/: Makefile
audio/cueplayer/: Makefile
audio/exaile-devel/: pkg-plist
audio/gsound/: Makefile
audio/jack/: Makefile  distinfo  pkg-message
audio/kaudiocreator/: Makefile
audio/kmix/: Makefile
audio/kstreamripper/: Makefile
audio/kwave/: Makefile
audio/lastfm-desktop/: Makefile
audio/libcanberra/: Makefile  pkg-plist
audio/libcanberra-gtk2/: Makefile  pkg-plist
audio/libcanberra-gtk3/: Makefile  pkg-plist
audio/libechonest/: Makefile  pkg-plist
audio/libechonest-qt5/: Makefile
audio/libkcddb-kde4/: Makefile
audio/liblastfm/: Makefile  distinfo  pkg-plist  pkg-plist.qt5
audio/liblastfm-qt5/: Makefile
audio/lollypop/: Makefile  distinfo  pkg-plist
audio/lv2/: Makefile
audio/mate-media/: Makefile
audio/minitunes/: Makefile
audio/musescore/: Makefile
audio/openal-soft/: Makefile
audio/pavucontrol/: Makefile
audio/picard/: Makefile  distinfo  pkg-plist
audio/picard-plugins/: Makefile  distinfo  pkg-plist
audio/plasma5-plasma-pa/: Makefile
audio/pulseaudio-qt/: Makefile
audio/rhythmbox/: Makefile
audio/rhythmbox-plugin-alternative-toolbar/: Makefile  distinfo  pkg-descr  pkg-plist
audio/rhythmbox-plugin-coverart-browser/: Makefile  distinfo  pkg-descr  pkg-plist
audio/rhythmbox-plugin-coverart-search-providers/: Makefile  distinfo  pkg-descr  pkg-plist
audio/simon-kde4/: Makefile
audio/sonata/: Makefile
audio/sound-juicer/: Makefile
audio/spotifyd/: Makefile
audio/taglib/: Makefile
benchmarks/wrk/: Makefile
cad/astk-serveur/: Makefile
cad/cura/: Makefile  distinfo  pkg-plist
cad/cura-engine/: Makefile  distinfo
cad/elmerfem/: Makefile
cad/fdm_materials/: Makefile  distinfo  pkg-plist
cad/kicad-devel/: pkg-plist
cad/qelectrotech/: Makefile
cad/solvespace/: Makefile  distinfo  pkg-plist
cad/uranium/: Makefile  distinfo  pkg-plist
chinese/: Makefile
chinese/wordpress-zh_CN/: Makefile
comms/: Makefile
comms/cubicsdr/: Makefile
comms/lirc/: Makefile
comms/svxlink/: Makefile
converters/wkhtmltopdf/: Makefile
databases/: Makefile
databases/akonadi/: Makefile
databases/akonadi-kde4/: Makefile
databases/evolution-data-server/: Makefile
databases/mariadb101-server/: pkg-plist
deskutils/: Makefile
devel/: Makefile
devel/hs-primitive/files/: patch-primitive.cabal
devel/hs-vector/files/: patch-vector.cabal
dns/: Makefile
editors/: Makefile
emulators/: Makefile
finance/: Makefile
french/: Makefile
games/: Makefile
german/: Makefile
graphics/: Makefile
graphics/mesa-dri/files/: configure.ac  patch-configure  patch-src_egl_Makefile.in  patch-src_gallium_auxiliary_util_u__cpu__detect.c  patch-src_gallium_drivers_swr_Makefile.am  patch-src_gallium_drivers_swr_SConscript  patch-src_gallium_drivers_swr_rasterizer_common_os.h  patch-src_gallium_drivers_swr_rasterizer_core_threads.cpp  patch-src_gallium_drivers_swr_rasterizer_memory_TilingFunctions.h  patch-src_gallium_drivers_swr_swr__fence.cpp  patch-src_intel_Makefile.in  patch-src_intel_vulkan_anv__allocator.c  patch-src_intel_vulkan_anv__device.c  patch-src_intel_vulkan_anv__gem.c  patch-src_intel_vulkan_anv__queue.c  patch-src_loader_loader.c  patch-src_util_build__id.c  patch-src_util_futex.h
japanese/: Makefile
korean/: Makefile
lang/: Makefile
math/: Makefile
misc/: Makefile
multimedia/: Makefile
net/: Makefile
net-im/: Makefile
net-mgmt/: Makefile
net-p2p/: Makefile
portuguese/: Makefile
print/: Makefile
russian/: Makefile
science/: Makefile
security/: Makefile
security/hs-cryptohash-sha256/files/: patch-cryptohash-sha256.cabal
security/hs-hackage-security/files/: patch-hackage-security.cabal
sysutils/: Makefile
textproc/: Makefile
www/: Makefile
x11/: Makefile
x11-fonts/: Makefile
x11-themes/: Makefile
x11-toolkits/: Makefile
x11-wm/: Makefile
(+1552 files in other folders)
