--- cryptohash-sha256.cabal.orig	2017-10-30 20:05:52 UTC
+++ cryptohash-sha256.cabal
@@ -41,7 +41,7 @@ source-repository head
 
 library
   default-language:  Haskell2010
-  build-depends:     base             >= 4.5   && < 4.10
+  build-depends:     base             >= 4.5   && < 4.11
                    , bytestring       >= 0.9.2 && < 0.11
 
   hs-source-dirs:    src
